# BeyondDefer

./: .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  main.py  pyproject.toml  readme.md  requirements.txt  test_all.py
.github/workflows/: code-test.yml  python-publish.yml
BL/: InDefense.py
Benchmarks/: ova_xAmpel.py
CIFAR/: avg.py  avg.sh  cifar.sh  cifar_posthoc_deferral.py  cifar_posthoc_ova.py  cost_list_generator.py  k_list_generator.py  k_lists.csv  run_this.sh
Calib_data/: calib_prep.py  data_eval.py
Datasets/: cifar.py
Entropy/: # testing H(Y|X) and H(Y|X1, X2) for X1 .py  entropy.py
Experiments/: CIFAR10K.py  SampleComp.py  acc_vs_c.py  basic.py  basic_parallel.py  comparison.py  cost_sensitive_cov_acc.py  no_loss_acc_cov.py  run_CIFAR10k.sh  run_SampleComp.sh  sub.sb  sub_CIFAR10k.sb  sub_SampleComp.sb
Experiments/__pycache__/: basic.cpython-310.pyc.139860035637664
Experiments/joblogs/: 0.err.txt  0.log.txt  0.out.txt
Experiments/joblogs_CIFAR10k/: 0.err.txt  0.log.txt  0.out.txt
Experiments/joblogs_SampleComp/: 0.err.txt  0.log.txt
Feature_Acquisition/: active.py
Fig-Operations/: fig.py
Imagenet/: readme.md
Lower_Bounds/: comparison.py
MyMethod/: CompareConfAdd.py  CompareConfMeta.py  CompareConfMetaCost.py  additional_cost.py  additional_defer.py  beyond_defer.py  cost_sensitive.py  costy_defer.py  learned_additional.py  learned_beyond.py
MyNet/: call_net.py  networks.py
Tests/: test.py
baselines/: compare_confidence_cost.py  lce_cost.py  one_v_all_cost.py
beyonddefer/: __init__.py  __main__.py  main.py
beyonddefer/BL/: InDefense.py  compare_confidence_cost.py
beyonddefer/Datasets/: cifar.py
beyonddefer/Experiments/: basic.py  comparison.py  no_loss_acc_cov.py
beyonddefer/Feature_Acquisition/: active.py
beyonddefer/Fig-Operations/: run_this.sh
beyonddefer/MyMethod/: CompareConfMetaCost.py  beyond_defer.py  cost_sensitive.py  learned_additional.py  learned_beyond.py
beyonddefer/MyNet/: call_net.py  networks.py
beyonddefer/Tests/: test.py
beyonddefer/human_ai_defer/baselines/: basemethod.py  one_v_all.py
beyonddefer/human_ai_defer/datasetsdefer/: cifar_h.py  cifar_synth.py  imagenet_16h.py
helpers/: metrics.py
human_ai_deferral/baselines/: basemethod.py  beyond_defer.py  compare_confidence.py  costy_defer.py  lce_surrogate.py  one_v_all.py  selective_prediction.py
human_ai_deferral/datasetsdefer/: basedataset.py  cifar_h.py  cifar_synth.py  imagenet_16h.py
human_ai_deferral/experiments/: cifark_exp.py  hatespeech_exp.py
human_ai_deferral/helpers/: metrics.py
human_ai_deferral/methods/: realizable_surrogate.py
human_ai_deferral/networks/: cnn.py
metrics/: metrics.py
misc/: losses.py
src/: Entropy-Lower-Bound.ipynb
src/.ipynb_checkpoints/: Entropy-Lower-Bound-checkpoint.ipynb
src/OvA-L2D/: OvA-L2D-Colab-Run.ipynb  OvA-L2D-Test.ipynb
src/OvA-L2D/.ipynb_checkpoints/: OvA-L2D-Colab-Run-checkpoint.ipynb
src/OvA-L2D/OvA-L2D/: .gitignore  LICENSE.md  README.md  data_utils.py  defer.yml  main.py  template.job  template2.job  validation.py
src/OvA-L2D/losses/: losses.py
src/beyonddefer/: __init__.py
src/beyonddefer/BL/: lce_cost.py  one_v_all_cost.py
src/beyonddefer/Experiments/: CIFAR10K.py  SampleComp.py  acc_vs_c.py  basic.py  comparison.py  cost_sensitive_cov_acc.py
src/beyonddefer/Feature_Acquisition/: active.py
src/beyonddefer/MyMethod/: CompareConfAdd.py  (+3 more)
(+36 files in other folders)
