# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beyonddefer"
version = "1.0.1"
description = "The code for paper 'Is Learn to Defer Enough? Optimal Predictors that Incorporate Human Decisions'"
readme = "README.md"
dependencies = [
    "gurobipy",
    "matplotlib",
    "numpy",
    "osfclient",
    "pandas",
    "Pillow",
    "Requests",
    "scikit_learn",
    "scipy",
    "sentence_transformers",
    "tikzplotlib",
    "torch>=2.1.1",
    "torchtext",
    "torchvision",
    "tqdm",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["beyonddefer*"] 
namespaces = false

[project.urls]
Homepage = "https://github.com/AminChrs/BeyondDefer"
