[tool.poetry]
name = "beyonddefer"
version = "1.0.7"
description = "The code for paper 'Is Learn to Defer Enough? Optimal Predictors that Incorporate Human Decisions'"
authors = ["BeyondDefer Authors"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
matplotlib = "3.6.*"
numpy = "^1.24.4"
osfclient = "^0.0.5"
pandas = "^2.0.3"
Pillow = "^10.1.0"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
scipy = "^1.10.1"
tikzplotlib = "^0.10.1"
torch = "^2.1.1"
torchtext = "^0.16.1"
torchvision = "^0.16.1"
tqdm = "^4.66.1"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
